Fix padding on smaller screens.

--- a/Storyteller.BlazorApp/Pages/Write.razor.css
+++ b/Storyteller.BlazorApp/Pages/Write.razor.css
@@ -14,7 +14,7 @@
     display: grid;
     grid-template-rows: [writing-area] 50% [filler] 50%;
     height: 100%;
-    width: 100%;
+    margin: 0 0 2rem;
 }
 
 .current-sentence {
@@ -50,7 +50,6 @@ p {
     font-family: "Adobe Jenson Pro", serif;
     font-size: 300%;
     hyphens: auto;
-    margin: 0 0 2rem;
     max-width: 75rem;
     padding-left: 2rem;
     padding-right: 2rem;
